fix: add z-index to popup

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -10,6 +10,7 @@
   visibility: hidden;
   opacity: 0;
   transition: visibility .3s, opacity .3s ease-in-out;
+  z-index: 1;
 }
 
 .popup::before {
